# mathkids

./: Cargo.toml
docs/: index.html
src/: app.rs  lib.rs  main.rs
