[package]
name = "mathkids"
version = "0.1.0"
authors = ["Johann Woelper <woelper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.9.0" # Gives us egui, epi and web+native backends
mathtutor = {path = "../mathtutor"}
serde = { version = "1.0.123", features = ["derive"], optional = true }

[features]
default = ["persistence"]
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

